--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1184,6 +1184,7 @@ ul#project-nav {
 
     body > header > h1 a {
         width:100%;
+        height:60px;
         padding: 0 0 0 0;
         text-indent: -999999px;
         background-size: cover;
