--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1236,7 +1236,9 @@ ul#project-nav {
     }
 
     body.home article.project {
-        width:50%;
+        clear:both;
+        width:100%;
+        height:160px;
     }
 
     body .content > section {
