--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1239,6 +1239,7 @@ ul#project-nav {
         clear:both;
         width:100%;
         height:160px;
+        overflow: hidden;
     }
 
     body .content > section {
