adding styles for mobile

--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -91,8 +91,10 @@
 {% block js_local %}
     <script type="text/javascript">
         function Flex() {
-            var height = $("article.project").width();
-            $("article.text div").css('min-height', height);
+            if ( $(window).width() >= 1024 ) {
+                var height = $("article.project").width();
+                $("article.text div").css('min-height', height);
+            }
         }
         $(document).ready(function() {
             Flex();
