--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1187,7 +1187,7 @@ ul#project-nav {
         height:60px;
         padding: 0 0 0 0;
         text-indent: -999999px;
-        background-size: cover;
+        background-size: contain;
     }
 
     body > header > nav {
