--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1186,6 +1186,7 @@ ul#project-nav {
         width:100%;
         height:70px;
         padding: 0 0 0 0;
+        margin: 0;
         text-indent: -999999px;
         background-size: contain;
     }
