--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1245,6 +1245,8 @@ ul#project-nav {
     body.home article.project {
         clear:both;
         width:100%;
+        height:100px;
+        overflow: hidden;
     }
 
     body .content > section {
