--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1237,6 +1237,11 @@ ul#project-nav {
         width:100%;
     }
 
+    article#article h1 {
+        left:0;
+    }
+
+
     article.text .tease {
         padding-bottom: 10px;
     }
