--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1259,11 +1259,16 @@ ul#project-nav {
         float:none;
     }
 
+    body > footer  {
+        padding: 10px;
+    }
+
     body > footer > .contact {
         float:none;
         clear:both;
         text-align:left;
-        margin:10px 0 0 0;
+        margin:0;
+        padding-top:10px;
     }
 
     body > footer > .copyright {
