--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1264,6 +1264,7 @@ ul#project-nav {
     }
 
     body > footer > .contact {
+        display:block;
         float:none;
         clear:both;
         text-align:left;
@@ -1272,10 +1273,11 @@ ul#project-nav {
     }
 
     body > footer > .copyright {
+        display:block;
         float:none;
         clear:both;
         text-align:left;
-        margin:10px 0 0 0;
+        margin:0;
     }
 }
 
