--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -589,6 +589,7 @@ body.studio.news .main{
 
 
 /*********** PROJECT STYLES **********/
+
 .categories {
     overflow: hidden;
     clear:both;
@@ -1290,6 +1291,51 @@ ul#project-nav {
     }
 }
 
+body.portfolio aside.sixth {
+    width:100%;
+}
+
+/*********** PROJECT STYLES **********/
+.categories {
+    overflow: hidden;
+    clear:both;
+}
+
+.categories li {
+    overflow: hidden;
+    float:left;
+    width:25%;
+    padding:4px 4px 0 0;
+    margin:0;
+    color:#fff;
+    font-weight: bold;
+    text-align: center;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.categories li.active {
+    width:50%;
+}
+
+.categories li.active a {
+    font-size:2.28570em;
+}
+
+.categories li a {
+        color:#fff;
+        background: #ccc;
+        float:left;
+        width:100%;
+        font-weight: bold;
+        text-align: center;
+        font-size:1.14285em;
+        text-decoration: none;
+}
+
 
 @media screen and (max-width: 1024px) {
     section.text article {
@@ -1385,3 +1431,4 @@ ul#project-nav {
         padding-top: 10px;
     }
 }
+
