--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1296,6 +1296,7 @@ ul#project-nav {
 
     .categories li {
        width:12.5%;
+        border: 1px solid red;
     }
 
     .categories li.active {
