--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1305,48 +1305,12 @@ ul#project-nav {
 }
 
 
-
-/*********** PROJECT STYLES **********/
-.categories {
-    overflow: hidden;
+@media screen and (max-width: 960px) {
+    body > header > nav {
     clear:both;
+    width:100%;
+    }
 }
-
-.categories li {
-    overflow: hidden;
-    float:left;
-    width:25%;
-    padding:4px 4px 0 0;
-    margin:0;
-    color:#fff;
-    font-weight: bold;
-    text-align: center;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -o-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-.categories li.active {
-    width:50%;
-}
-
-.categories li.active a {
-    font-size:2.28570em;
-}
-
-.categories li a {
-        color:#fff;
-        background: #ccc;
-        float:left;
-        width:100%;
-        font-weight: bold;
-        text-align: center;
-        font-size:1.14285em;
-        text-decoration: none;
-}
-
 
 @media screen and (max-width: 1024px) {
     body {
