adjusting mobile styles

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1324,6 +1324,19 @@ ul#project-nav {
         clear:both;
         width:100%;
     }
+
+    body.portfolio aside.sixth {
+        width:100%;
+    }
+
+    .categories li {
+       width:12.5%;
+       border: 1px solid red;
+    }
+
+    .categories li.active {
+        width:25%;
+    }
 }
 
 @media screen and (max-width: 1024px) {
