adjusting mobile styles

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1330,7 +1330,7 @@ ul#project-nav {
         width:100%;
     }
 
-    body.portfolio aside.two-thirds {
+    body.portfolio section.two-thirds {
         clear:both;
         width:100%;
     }
