adjusting mobile styles

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1341,6 +1341,9 @@ ul#project-nav {
 
     .categories li.active {
         width:6.25%;
+    }
+
+    .categories li.active a {
         font-size:1.14em;
     }
 }
