--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1331,6 +1331,16 @@ ul#project-nav {
         width:100%;
     }
 
+    body.home > .content > div.third > article.update {
+        float:left;
+        width:66.66667%;
+    }
+
+    body.home > .content > div.third > article.featured {
+        float:left;
+        width:33.33333%;
+    }
+
     body.portfolio aside.sixth {
         clear:both;
         width:100%;
