adjusting mobile styles

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1332,7 +1332,7 @@ ul#project-nav {
     }
 
     body.home > .content > div.third > article.update {
-        float:left;
+        float:right;
         width:75%;
     }
 
