--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1305,7 +1305,7 @@ ul#project-nav {
 }
 
 @media screen and (max-width: 640px) {
-    body.home .content div div:first-child article.project:first-child {
+    body.home .content div div:nth-child(2) article.project:first-child {
        display:none;
     }
 
