adjusting mobile styles

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1314,6 +1314,18 @@ ul#project-nav {
         width:100%;
     }
 
+    .details .description {
+        clear:both;
+        float:none;
+        width:100%;
+    }
+
+    .details .meta {
+        clear:both;
+        float:none;
+        width:100%;
+    }
+
 }
 
 @media screen and (max-width: 960px) {
