--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1332,6 +1332,11 @@ ul#project-nav {
         width:100%;
     }
 
+    .categories, .info-boxes, .people, #project-nav {
+        width:25%;
+        float:left;
+    }
+
 }
 
 @media screen and (max-width: 960px) and (min-width: 640px) {
