--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1347,6 +1347,18 @@ ul#project-nav {
         float:left;
     }
 
+    .slideshow {
+        width:100%;
+    }
+
+    .slideshow .flex-direction-nav {
+        width:80px;
+    }
+
+    nav.expand {
+        display:none;
+    }
+
 }
 
 @media screen and (max-width: 960px) and (min-width: 640px) {
