--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1361,7 +1361,7 @@ ul#project-nav {
 
 }
 
-@media screen and (max-width: 960px) and (min-width: 640px) {
+@media screen and (max-width: 960px) {
     body > header {
         height:auto;
         margin: 0;
