--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1304,7 +1304,7 @@ ul#project-nav {
     }
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (min-width: 481px) {
     body.home .content div div:nth-child(2) article.project:first-child {
        display:none;
     }
@@ -1361,7 +1361,7 @@ ul#project-nav {
 
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (min-width: 641px) {
     body > header {
         height:auto;
         margin: 0;
@@ -1465,7 +1465,7 @@ ul#project-nav {
     }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 961px) and (max-width: 1024px) {
     body {
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
