--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1436,6 +1436,12 @@ ul#project-nav {
         width:50%;
     }
 
+    .details .meta .info-boxes li {
+        margin: 0;
+        padding: 0;
+        float:left;
+    }
+
 }
 
 
