--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1607,6 +1607,11 @@ ul#project-nav {
         padding: 4px 4px 0 0;
         float:left;
     }
+
+    article.project.list:hover header {
+        display:none;
+        opacity:0;
+    }
 }
 
 
