--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1614,7 +1614,9 @@ ul#project-nav {
     }
 
     body.research > .content > header.two-thirds,
-    body.research > .content > aside.third {
+    body.research > .content > aside.third,
+    body.news > .content > header.two-thirds,
+    body.news > .content > aside.third {
         float:none;
         width:100%;
     }
