--- a/futuregreen/templates/contact.html
+++ b/futuregreen/templates/contact.html
@@ -33,7 +33,7 @@
         <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_08.jpg" alt="Map Tile 8"/>
     </section>
     <section class="box sixth">
-        <a href="http://g.co/maps/zxa4h">
+        <a href="http://goo.gl/maps/UakVH">
         <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_09.jpg" alt="Map Tile 9"/>
         </a>
     </section>
