--- a/futuregreen/templates/contact.html
+++ b/futuregreen/templates/contact.html
@@ -17,7 +17,7 @@
     </section>
     <section class="box third" id="contact-info">
         <div>
-        {%  gblock "contact_info" for "content.ContentBlock" %}
+        {%  gblock "contact_info" for "content.ContentBlock"  %}
         </div>
         <img class="flex" src="{{ STATIC_URL }}images/contact/contact_05.jpg" alt="Map Tile 5"/>
     </section>
@@ -30,12 +30,12 @@
         <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_07.jpg" alt="Map Tile 7"/>
     </section>
     <section class="box sixth">
+         <a href="http://goo.gl/maps/UakVH">
         <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_08.jpg" alt="Map Tile 8"/>
+        </a>
     </section>
     <section class="box sixth">
-        <a href="http://goo.gl/maps/UakVH">
         <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_09.jpg" alt="Map Tile 9"/>
-        </a>
     </section>
     <section class="box sixth">
         <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_10.jpg" alt="Map Tile 10"/>
@@ -69,7 +69,7 @@
     <script type="text/javascript">
         function Flex() {
             var height = $(".sixth").width();
-            $("#contact-info div").css('min-height', height);
+            $("#contact-info").css('min-height', height);
         }
         $(document).ready(function() {
             Flex();
