--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -184,7 +184,7 @@ body > header > nav li a:active {
 body.studio > header > nav li a.studio,
 body.portfolio > header > nav li a.portfolio,
 body.research > header > nav li a.research,
-body.contact > header > nav li a.contact {
+body.news > header > nav li a.news {
      background:url('images/vertical-bg.png') no-repeat 10px top,
                url('images/bottom-bg.png') no-repeat left 10px,
                url('images/corner-bg-bottom-right.png') no-repeat right bottom;
