--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -22,5 +22,20 @@
     {%  endfor %}
 </section>
 <section class="third">
+    <header class="box">
+        {%  gblock "studio_contact" for "content.ContentBlock" with "content/contentblock/aside.html" %}
+    </header>
+    <article id="news">
+              <section class="box">
+            <h2>Future Green Studio</h2>
+            <p><a href="{% url contact %}">18 Bay Street</a>
+               Brooklyn, NY 11231 <br />
+               T. 718.855.8995 <br />
+               F. 718.228.7004 <br />
+               E. <a href="info@futuregreenstudio.com">info@futuregreenstudio.com</a>
+            </p>
+            </section>
+        </div>
+    </article>
 </section>
 {% endblock content %}
