--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -64,6 +64,7 @@
                 <li><a class="portfolio" href="{% url portfolio_project_list %}">Portfolio</a></li>
                 <li><a class="research" href="{% url research %}">Research</a></li>
                 <li><a class="news" href="{% url news %}">News</a></li>
+                <li><a class="contact" href="{% url contact %}">Contact</a></li>
             </ul>
         </nav>
     </header>
