moved tags to metadata, fixed link on studio page

--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -15,7 +15,8 @@
     {% block metadata %}
     <meta name="description" content="Future Green Studio is a design-build
                                       firm in Brooklyn, New York specializing in 
-                                      landscape urbanism and green roof design."   
+                                      landscape urbanism and green roof 
+design.">   
     <meta name="author" content="Future Green Studio">
     {% endblock metadata %}
 
