--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -23,7 +23,7 @@
 </section>
 <section class="third">
     <header class="box">
-        <a href="{% url contact %}">
+        <a class="wraplink" href="{% url contact %}">
         {%  gblock "studio_contact" for "content.ContentBlock" with "content/contentblock/aside.html" %}
         </a>
     </header>
