moved tags to metadata, fixed link on studio page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -3,8 +3,7 @@
 {% block metadata %}
 {{ block.super }}
 {% if project.tags.all %}
-<meta name="keywords" 
-content="{% for tag in project.tags.all %}{{ tag.name }}, {% endfor %}">
+<meta name="keywords" content="{% for tag in project.tags.all %}{{ tag.name }}, {% endfor %}">
 {% endif %}
 {% endblock metadata %}
 {% block content %}
