--- a/futuregreen/templates/contact.html
+++ b/futuregreen/templates/contact.html
@@ -16,11 +16,11 @@
         <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_04.jpg" alt="Map Tile 4"/>
     </section>
     <section class="box third" id="contact-info">
-        <div>
         {%  gblock "contact_info" for "content.ContentBlock"  %}
-        </div>
+        <div>
         <img class="flex" src="{{ STATIC_URL }}images/contact/contact_05.jpg" alt="Map Tile 5"/>
-    </section>
+        </div>    
+</section>
 </div>
 <div class="full">
     <section class="box sixth">
@@ -69,7 +69,7 @@
     <script type="text/javascript">
         function Flex() {
             var height = $(".sixth").width();
-            $("#contact-info").css('min-height', height);
+            //$("#contact-info").css('min-height', height);
         }
         $(document).ready(function() {
             Flex();
