--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -42,7 +42,10 @@
         </section>
     {% endif %}
         <section class="details">
-            <header style="margin: 0 10px 5px 10px;"><h1>{{ project.name }}</h1></header>
+            <header style="margin: 0 10px 5px 10px;">
+                <h1>{{ project.name }}</h1>
+                <h2 style="margin-top:10px">{{ project.address }}</h2>
+            </header>
             <div class="description box">
                 {{ project.description_html|safe }}
             </div>
