--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -53,19 +53,20 @@ table {
 body {
     font-weight:normal;
     font-size:87.5%;
-    font-family: "museo-sans-1","museo-sans-2", Arial, Helvetica, sans-serif;
+    font-family: "kulturista-web-1","kulturista-web-2", Arial, Helvetica, sans-serif;
     color:#444;
     -ms-word-wrap: break-word;
     word-wrap: break-word;
 }
 
 h1 {
-    font-family: "museo-sans-1","museo-sans-2, sans-serif;
+    font-family: "purista-web-1","purista-web-2";
     font-size:1.71428em;
     text-transform: uppercase;
 }
 
 h2 {
+    font-family: "purista-web-1","purista-web-2";
     font-size: 1.28571em;
 }
 
@@ -336,7 +337,7 @@ h1.overlay {
     padding: 0 0 0 0;
     font-size:2.4em;
     line-height:1em;
-    margin:-0.8em 0 0 10px;
+    margin:-0.9em 0 0 10px;
     color:#fff;"
 }
 
